msva-perl (0.1) upstream;
  
   * first release.
  
 -- Daniel Kahn Gillmor <dkg@fifthhorseman.net>  Tue, 09 Mar 2010 00:08:54 -0500
