@@ -1,2 +1,0 @@
-.git* export-ignore
-notes_from_whiteboard.txt export-ignore
